--- a/9.17/npm/package.json
+++ b/9.17/npm/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index",
+    "dev": "webpack"
   },
   "keywords": [
     "npm-test"
